unpackaged/main/default/objects/litify_docs__Folder_Structure_Template__c/litify_docs__Folder_Structure_Template__c.object-meta.xml
<CustomObject>
    <description>Object that stores templates for Docrio folder structures.</description>
    <label>Folder Structure Template</label>
    <nameField>
        <label>Folder Structure Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folder Structure Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>