unpackaged/main/default/objects/litify_docs__Folder_Structure_Template__c/fields/litify_docs__Folder_Structure__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Folder_Structure__c</fullName>
    <description>The folder structure itself, represented in JSON format.</description>
    <label>Folder Structure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>