unpackaged/main/default/objects/litify_docs__Folder_Structure_Template__c/fields/litify_docs__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Object_API_Name__c</fullName>
    <description>The API name of the object to which the folder structure can be applied.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>