unpackaged/main/default/objects/litify_docs__Folder_Structure_Template__c/fields/litify_docs__Order__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Order__c</fullName>
    <description>Indicates the precedence of the Folder Structure Template among other Folder Structure Templates for the same object.</description>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>