unpackaged/main/default/objects/litify_docs__Folder_Structure_Template__c/fields/litify_docs__Rule_Group__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Rule_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Group</label>
    <referenceTo>litify_docs__Rule_Group__c</referenceTo>
    <relationshipLabel>Folder Structure Templates</relationshipLabel>
    <relationshipName>Folder_Structure_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>